[package]
name = "juniper_lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.11"
serde_json = "1.0.96"

axum = {version = "0.6.18"}
hyper = { version =  "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
futures = "0.3.28"
axum-macros = "0.3.7"

